intento de obtencion de src de imagen con scraping

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <th class="columna">Vendedor</th>
                     <th class="columna">Precio</th>
                     <th class="columna">Tipo</th>
+                    <th class="columna">Imagen</th>
                 </tr>
             </thead>
             <tbody class="cuerpo-tabla">
