--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabla de la Base de Datos</title>
-    <link rel="stylesheet" type="text/css" href="autogestion.css">
+    <link rel="stylesheet" type="text/css" href="src/autogestion.css">
 </head>
 <body>
     <div class = "visibles">
@@ -31,6 +31,6 @@
         </table>
     </div>
     
-    <script src="index.js"></script>
+    <script src="src/index.js"></script>
 </body>
 </html>
