arreglos y adicion de un filtro de tipo de producto

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             <select id="proveedores">
                 <option value="">Seleccionar proveedor</option>
             </select>
+            <select id="tipos">
+                <option value="">Seleccionar tipo</option>
+            </select>
         </div>
         <input type="text" id="filtro" placeholder="Buscar...">
         <div class="tabla-container">
@@ -27,7 +30,7 @@
                     <th class="columna">Vendedor</th>
                     <th class="columna">Precio</th>
                     <th class="columna">Tipo</th>
-                    <th class="columna">Imagen</th>
+                    <th class="columna">link</th>
                 </tr>
             </thead>
             <tbody class="cuerpo-tabla">
